src/objects/Cource__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled_Students__c</fullName>
        <label>Enrolled students</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Success_Ratio__c</fullName>
        <label>Success  Ratio</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>